# Donation

./: .env.local  .env.production  Dockerfile  Makefile  README.rst  db.sqlite3  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
root/campaigns/: apps.py  enums.py  models.py  serializers.py  signals.py  urls.py  views.py
root/campaigns/migrations/: 0001_initial.py
root/config/: asgi.py  settings.py  urls.py  wsgi.py
root/donations/: apps.py  enums.py  models.py  utils.py
root/donations/migrations/: 0001_initial.py  0002_remove_donation_currency_remove_donation_status_and_more.py  0003_donation_status.py
root/home/: apps.py  views.py
root/notifications/: apps.py  consumers.py  routing.py  urls.py
root/templates/: home.html
root/users/: admin.py  apps.py  enums.py  models.py  utils.py
root/users/management/commands/: create_config_data.py  create_default_super_user.py
root/users/migrations/: 0001_initial.py  0002_role_permission.py  0003_remove_role_user_user_role_alter_permission_name_and_more.py  0004_alter_user_role.py  0005_alter_role_name.py  0006_alter_permission_name.py  0007_remove_user_role_role_user.py  0008_remove_role_user_user_role.py
