[tool.poetry]
name = "donation"
version = "0.1.0"
description = ""
authors = ["abdulah shaker <abdullah.shaker2017@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-root"]
build-backend = "poetry.root.masonry.api"
